--- a/vignettes/contributing_content.Rmd
+++ b/vignettes/contributing_content.Rmd
@@ -10,19 +10,18 @@ vignette: >
 ---
 
 # DDHCONNECT: Contributing Content
-The ddhconnect package allows you to add datasets and resources for any type of data.
-
-With proper authorization, you can add datasets and resources to the Data Catalog. It is important to remember
-
+With proper authorization, you can add and update datasets and resources to the Data Catalog through `ddhconnect`.
 
 ## Setting Up Your Connection
-First, begin by setting up your account with the following `dkanr_setup` function to authenticate the user. Login information for access to the API's extended services can be obtained by contacting the World Bank's (IT Services)[www.worldbank.org], provided you are authorized for these credentials.
+First, begin by setting up your account with the following `dkanr_setup` function to authenticate the user. Login information for access to the API's extended services can be obtained by contacting the World Bank's IT Services, provided you are authorized for these credentials.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 library(dkanr)
 library(dhhconnect)
-dkanr_setup(url = 'http://datacatalog.worldbank.com',
-            username = 'YOUR_USERNAME',
-            password = 'YOUR_PASSWORD')
+dkanr_setup(
+  url = 'http://datacatalog.worldbank.com',
+  username = 'YOUR_USERNAME',
+  password = 'YOUR_PASSWORD'
+)
 ```
 
 You can view your profile information for the Data Catalog by calling `get_user_details()`. This will return your first and last name as well as your internal ID.
@@ -32,49 +31,48 @@ get_user_details(credentials, uid = "YOUR_UPI_#")
 ```
 
 ## Creating Content
-To add content to the site, begin by formatting your content into named vectors by assigning the field names and their corresponding values [ex: c(“title” = “World Development Indicators”)]. These can then be passed to the create functions to automatically populate your JSON body which can then be passed to the Data Catalog. Please reference the curation documentation to see which fields are required.
+To add content to the site, begin by formatting your content into named vectors by assigning the field names and their corresponding values [ex: c(“title” = “World Development Indicators”)]. These can then be passed to the create functions to automatically populate your JSON body which sent to the Data Catalog. Please reference the curation documentation to see which fields are required.
 
 ### Adding a new dataset
-Adding a new dataset to Data Catalog begins with adding the dataset's metadata. To begin the contribution process, gather the required and recommended metadata information for your dataset. Follow the DDH Curation handbook for guidelines to populate the correct information.
+The process of adding a new dataset to Data Catalog begins with adding the dataset's metadata. To begin the contribution process, gather the required and recommended metadata information for your dataset. Follow the DDH Curation handbook for guidelines to populate the correct information. Since certain metadata values require a specific input, use the `map_tids()` function if you would like to convert your information to the correct format.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 dataset_metadata = c("title" = "YOUR DATASET TITLE",
-     "field_wbddh_country" = "YOUR DATASET COUNTRY")
-mapped <- map_tids(dataset_metadata)
+                     "field_wbddh_country" = "YOUR DATASET COUNTRY")
+mapped_values <- map_tids(dataset_metadata)
 ```
 
-Once the named vector has been created, use the `create_dataset()` function to add that information to the Data Catalog. This named vector should be passed through the `body=` parameter
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-dataset_json <- create_json_body(values = dataset_metadata, node_type = “dataset”)
+Once the named vector is created, use the `create_json_body()` function format your information into a JSON body. Pass the named vector into the `body =` parameter. After producing the formatted JSON, you can add this information to the Data Catalog with the `create_dataset()` function.
+```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
+dataset_json <- create_json_body(values = mapped_values, node_type = “dataset”)
 create_dataset(credentials, body = dataset_json)
 ```
 
+You can view your new Data Catalog dataset to confirm the submission by using the printed node id (nid).
+```{r message = FALSE, warning = FALSE, paged.print = FALSE, eval = FALSE}
+your_dataset <- get_metadata("YOUR NID")
+your_dataset
+```
+
 ### Adding a supporting file/link
-Once the metadata has been added, you can add the data files/links to the site, in addition to other supporting resources. Using the same method as adding the metadata, you can add a resource to the Data Catalog by creating a named list, formatting it into the JSON body, and passing it to `create_resource()`.
+Once the metadata is submitted, you can add the data files/links to the site in addition to other supporting resources. Using the same method as adding the metadata, you can add a resource to the Data Catalog by creating a named list, formatting it into the JSON body, and passing it to `create_resource()`. In addition, add
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 resource_metadata <- c("title" = "YOUR RESOURCE TITLE",
      "field_wbddh_country" = "YOUR RESOURCE COUNTRY")
 resource_json <- create_json_body(values = resource_metadata, node_type = “resource”)
-create_resource(credentials, body = resource_json)
+create_resource(body = resource_json)
 ```
 
-Once this resource has been added to the Data Catalog, it needs to be mapped to the corresponding metadata for the dataset using the function `attach_resource_template()`.
+If your resource is a local file, you may upload it to the Data Catalog.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-attach_resource_template()
+attach_file_to_resource(resource_nid = "YOUR RESOURCE NID", file_path = "YOUR FILE PATH")
 ```
 
-Since multiple resource can be mapped to one dataset, looping functions make this process more simple.
-```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-resource_1 <- c("title" = "YOUR RESOURCE TITLE",
-                "field_wbddh_country" = "YOUR RESOURCE COUNTRY")
-resource_2 <- c("title" = "YOUR RESOURCE TITLE",
-                "field_wbddh_country" = "YOUR RESOURCE COUNTRY")
 
-all_resources <- c(resource_1, resource_2)
-for (resource in all_resources) {
-  resource_json <- create_json_body(values = resource, node_type = “resource”)
-  create_resource(credentials, body = resource_json)
-  attach_resource_template()
-}
+After the resource is added to the Data Catalog, it needs to map to the corresponding metadata for the dataset using the function `attach_resource_to_dataset()`. Since multiple resource can be mapped to one dataset, you can pass a vector with the corresponding resource nids to finish the mapping all in one go.
+```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
+attach_resource_to_dataset(dataset_nid = "YOUR DATASET NID"
+  resource_nid = c("YOUR RESOURCE NID 1", "YOUR RESOURCE NID 2")
+)
 ```
 
 ## Updating Content
@@ -83,19 +81,22 @@ Updating content in the Data Catalog requires knowing the node ID of the content
 ### updating a dataset
 To obtain the node id, you may search the catalog based on the title of the object. For example, passing the following parameters will return the node id for the World Development Indicators.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-search_catalog(fields=c("nid", "title"), filters=c("title"="World Development Indicators"))
+indicators_search <- search_catalog(fields = c("nid", "title"),
+                                    filters = c("title" = "World Development Indicators"))
+wdi_nid <- indicators_search[[1]]$nid
 ```
 
 ### updating a resource
-Use the same process as with creating a new dataset, by creating a named vector with the formatted metadata and passing it to create a JSON body. To update the node, use the `update_dataset()` function.
+Use the same process as with creating a new dataset, use named vector with the formatted metadata and passing it to create a JSON body. To update the node, use the `update_dataset()` function.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
-dataset_metadata = c("title" = "YOUR DATASET TITLE",
+update_metadata = c("title" = "YOUR DATASET TITLE",
      "field_wbddh_country" = "YOUR DATASET COUNTRY")
-dataset_json = create_json_body(values = dataset_metadata, node_type = “dataset”)
+mapped_values <- map_tids(update_metadata)
+dataset_json = create_json_body(values = mapped_values, node_type = “dataset”)
 update_dataset(credentials, body = dataset_json)
 ```
 
-The same methodology may be used for updating the resource metadata. First, obtain the resource node id. Second, format the JSON. Lastly, use the `update_resource` function.
+Use the same method to update the resource metadata. First, get the resource node id. Second, format the JSON. Lastly, use the `update_resource` function.
 ```{r message=FALSE, warning=FALSE, paged.print=FALSE, eval=FALSE}
 resource_metadata = c("title" = "YOUR RESOURCE TITLE",
      "field_wbddh_country" = "YOUR RESOURCE COUNTRY")
